--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/typeorm": "^9.0.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "dotenv": "^16.1.3",
+    "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.3.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
