--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@types/jsonwebtoken": "^9.0.2",
     "dotenv": "^16.1.3",
     "jsonwebtoken": "^9.0.0",
+    "multer": "1.4.5-lts.1",
     "mysql2": "^3.3.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "typeorm": "^0.3.16"
+    "typeorm": "^0.3.16",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
