--- a/.env
+++ b/.env
@@ -1,16 +1,14 @@
-SQL_TYPE = mysql
+SERVE_HOST = http://localhost
 
-HOST = 119.23.233.156
+SERVE_PORT = 9000
 
-SQL_PORT = 3306
+DATABASE_HOST = 119.23.233.156
+
+DATABASE_PORT = 3306
 
 USERNAME = root
 
 PASSWORD = Aa123456@
 
 DATABASE = coderhub
-
-SERVE_HOST = http://localhost
-
-SERVE_PORT = 9000
 
